--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <body>
     <header class="page-header">
       <div class="container">
-      sanchetos4@yandex.ru +79002127370
+      
       </div>
     </header>
 
     <section class="hero-image">
-      <h1 class="heading">Тулинов Александр</h1>
+      <h1 class="heading">Pyuzya</h1>
       <p>Junior верстальщик</p>
     </section>
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-      <h3>Пока нет</h3>
+      <h3>Отсутствие их означает безделие</h3>
     </section>
 
     <footer class="page-footer">
-      sanchetos4@yandex.ru +79002127370
+      
     </footer>
   </body>
 </html>
