--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-      <h3>Отсутствие их означает безделие</h3>
+      <h3>Отсутствие их означает безделье</h3>
     </section>
 
     <footer class="page-footer">
