--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="outlines.css">
+    <link rel="stylesheet" href="style.css">
     <title>Портфолио</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">"
   </head>
@@ -10,22 +10,23 @@
   <body>
     <header class="page-header">
       <div class="container">
-      
+          Контакты:
       </div>
     </header>
-
+      <div class="container">
     <section class="hero-image">
       <h1 class="heading">Pyuzya</h1>
       <p>Junior верстальщик</p>
     </section>
-
+      </div>
+      <div class="container">
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
       <h3>Отсутствие их означает безделье</h3>
     </section>
-
+      </div>
     <footer class="page-footer">
-      
+      Контакты:
     </footer>
   </body>
 </html>
