--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-          Контакты:
+        Контакты:<a class="header-email" href="mailto:pyuzya.rab@gmail.com">pyuzya.rab@gmail.com</a>
       </div>
     </header>
       <div class="container">
